
install(
  FILES
    network-airplane.svg
    network-cellular-3g.svg
    network-cellular-edge.svg
    network-cellular-evdo.svg
    network-cellular-hspa-plus.svg
    network-cellular-hspa.svg
    network-cellular-lte.svg
    network-cellular-pre-edge.svg
    network-roaming.svg
  DESTINATION
    "${CMAKE_INSTALL_DATADIR}/icons/hicolor/scalable/status/"
)

