
install(
  FILES
    gsm-3g-full-secure.svg
    gsm-3g-full.svg
    gsm-3g-high-secure.svg
    gsm-3g-high.svg
    gsm-3g-low-secure.svg
    gsm-3g-low.svg
    gsm-3g-medium-secure.svg
    gsm-3g-medium.svg
    gsm-3g-none-secure.svg
    gsm-3g-none.svg
    network-airplane.svg
    network-cellular-3g.svg
    network-cellular-edge.svg
    network-cellular-evdo.svg
    network-cellular-hspa-plus.svg
    network-cellular-hspa.svg
    network-cellular-lte.svg
    network-cellular-pre-edge.svg
    network-roaming.svg
  DESTINATION
    "${CMAKE_INSTALL_DATADIR}/icons/hicolor/scalable/status/"
)

