
status_iconsdir = $(datadir)/icons/hicolor/22x22/status/

status_icons_DATA = \
	networking-airplane.svg \
	networking-cellular-3g.svg \
	networking-cellular-edge.svg \
	networking-cellular-evdo.svg \
	networking-cellular-hspa-plus.svg \
	networking-cellular-hspa.svg \
	networking-cellular-lte.svg \
	networking-cellular-pre-edge.svg \
	networking-no-data.svg \
	networking-roaming.svg
