
status_iconsdir = $(datadir)/icons/hicolor/scalable/status/

status_icons_DATA = \
	network-airplane.svg \
	network-cellular-3g.svg \
	network-cellular-edge.svg \
	network-cellular-evdo.svg \
	network-cellular-hspa-plus.svg \
	network-cellular-hspa.svg \
	network-cellular-lte.svg \
	network-cellular-pre-edge.svg \
	network-roaming.svg
